--- a/java/P_Vista/src/org/milaifontanals/info/projecte1/Principal.form
+++ b/java/P_Vista/src/org/milaifontanals/info/projecte1/Principal.form
@@ -32,6 +32,7 @@
               </Properties>
               <Events>
                 <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="paisosMenuMousePressed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="paisosMenuActionPerformed"/>
               </Events>
             </MenuItem>
           </SubComponents>
