--- a/java/P_Vista/src/org/milaifontanals/info/projecte1/PProducte.form
+++ b/java/P_Vista/src/org/milaifontanals/info/projecte1/PProducte.form
@@ -427,16 +427,25 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Album"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbAlbumActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JRadioButton" name="RbLlista">
           <Properties>
             <Property name="text" type="java.lang.String" value="Llista"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="RbLlistaActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JRadioButton" name="rbCanco">
           <Properties>
             <Property name="text" type="java.lang.String" value="Can&#xe7;o"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="rbCancoActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel9">
           <Properties>
