--- a/java/P_Vista/src/org/milaifontanals/info/projecte1/PProducte.form
+++ b/java/P_Vista/src/org/milaifontanals/info/projecte1/PProducte.form
@@ -88,7 +88,7 @@
                               <Component id="jLabel8" min="-2" pref="35" max="-2" attributes="0"/>
                               <Component id="jLabel7" alignment="0" min="-2" pref="35" max="-2" attributes="0"/>
                               <Component id="jLabel9" min="-2" pref="47" max="-2" attributes="0"/>
-                              <Component id="jTextField1" alignment="0" min="-2" pref="67" max="-2" attributes="0"/>
+                              <Component id="txbtitiol" alignment="0" min="-2" pref="67" max="-2" attributes="0"/>
                               <Component id="actiurb" alignment="0" min="-2" max="-2" attributes="0"/>
                               <Component id="Inactiurb" min="-2" max="-2" attributes="0"/>
                               <Component id="RbLlista" alignment="0" min="-2" max="-2" attributes="0"/>
@@ -179,7 +179,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" attributes="0">
                           <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                          <Component id="jTextField1" min="-2" max="-2" attributes="0"/>
+                          <Component id="txbtitiol" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="jLabel7" min="-2" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" attributes="0">
@@ -452,7 +452,10 @@
             <Property name="text" type="java.lang.String" value="Titol"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField1">
+        <Component class="javax.swing.JTextField" name="txbtitiol">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txbtitiolActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
